--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -132,13 +132,13 @@ jobs:
     # Step 4: Start services
     - name: Start services
       run: |
-        docker-compose up -d
+        docker compose up -d
         sleep 10  # Wait for services to start
     
     # Step 5: Check service health
     - name: Check service health
       run: |
-        docker-compose ps
+        docker compose ps
         curl -f http://localhost:3000/health || exit 1
     
     # Step 6: Run integration tests
@@ -155,12 +155,12 @@ jobs:
     - name: View logs on failure
       if: failure()
       run: |
-        docker-compose logs
+        docker compose logs
     
     # Step 8: Stop services
     - name: Stop services
       if: always()
-      run: docker-compose down -v
+      run: docker compose down -v
 
   # Job 4: Security Scan
   security-scan:
