--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,12 @@ on:
     branches: [ main ]
   workflow_dispatch:  # Allow manual triggering
 
+# Add permissions for security scanning
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 # Environment variables
 env:
   DOCKER_IMAGE: chatbot-app
@@ -184,7 +190,7 @@ jobs:
     
     # Step 3: Upload Trivy scan results
     - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       if: always()
       with:
         sarif_file: 'trivy-results.sarif'
