keep volume mount but exclude node_modules in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - chatbot-network
     volumes:
       - ./app:/app:ro  # Mount as read-only for development
+      - /app/node_modules
 
 volumes:
   mysql_data:
